--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://casir.netlify.app/"
 languageCode = "en-us"
 title = "Blog Carlos"
 theme = "dimension"
